# tt-metal

./: .cursorrules  CMakeLists.txt  README.md  build_metal.sh  conftest.py  create_venv.sh  docker_wrapper.sh  dump.txt  dump_formatted.txt  format.py  graph_builder.py  gstCommands  install_dependencies.sh  mnist.py  multi_host_fabric_tests.sh  out.txt  pyproject.toml  rankfile  setup.py  testing.py
.github/: CODEOWNERS
.github/workflows/: blackhole-llmbox-fabric-build-and-unit-tests.yaml  blackhole-nightly-tests.yaml  blackhole-post-commit.yaml  fast-dispatch-full-regressions-and-models-impl.yaml  perf-device-models-impl.yaml  perf-device-models.yaml  perf-models-impl.yaml  pipeline-select-galaxy.yaml  pr-gate.yaml  single-card-demo-tests-impl.yaml  smoke.yaml  t3000-unit-tests-impl.yaml  tg-demo-tests-impl.yaml  tg-frequent-tests-impl.yaml  tg-model-perf-tests-impl.yaml  tg-nightly-tests-impl.yaml  tg-stress.yaml  tg-unit-tests-impl.yaml  upstream-tests.yaml
cmake/: flatbuffers.cmake
dockerfile/: Dockerfile  Dockerfile.manylinux
dockerfile/upstream_test_images/: run_upstream_tests_vanilla.sh
examples/ttrun/: rank_binding_simple.yaml
models/: conftest.py  utility_functions.py
models/common/: rmsnorm.py
scripts/: install_debugger.sh
tests/tt_metal/distributed/multihost/: CMakeLists.txt  intermesh_rank_bindings.yaml  multihost_mesh_rank_bindings.yaml  test_multihost_control_plane.cpp
tt_metal/: CMakeLists.txt  sfpi-version.sh  tt_metal.cpp
ttnn/: CMakeLists.txt
ttnn/ai-op-template/step0-scaffold/template/: CMakeLists.txt  example.cpp  example.hpp
(+815 files in other folders)
